Fixed: small layout issues, added @media for frontend

--- a/src/main/resources/static/MainSection.css
+++ b/src/main/resources/static/MainSection.css
@@ -1,13 +1,21 @@
 html {
     scroll-behavior: smooth;
+    overflow-x: auto;
+
 }
 
 body {
+
+    display: block;
+
+
     background: #f4f6fa;
-    display:flex;
+
     flex-direction: column;
     font-family: "Inter", sans-serif;
     margin: 0;
+    min-width: max-content;
+
 }
 
 .mainSection {
@@ -54,6 +62,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    align-self: center;
+    margin-left:5em;
 }
 
 .nav-links {
@@ -90,7 +100,6 @@ body {
     align-items: center;
     flex-direction: column;
     visibility: hidden;
-
 }
 
 .settingsBtn {
@@ -150,9 +159,8 @@ body {
     width: 24em;
     height: 32em;
     border-radius: 1em;
-    background-color: #ffffff;
+    background-color:#FAF7F0;
     gap: .5em;
-    margin-left: 6em;
     margin-right: 6em;
     margin-top: 1em;
     display: flex;
@@ -222,7 +230,7 @@ body {
 
 .progressBar {
     border: 1px solid rgb(237, 235, 235);
-    width: 90%;
+    width: 20em;
     height: 2em;
     border-radius: 6px;
     display: flex;
@@ -236,6 +244,8 @@ body {
     background-size: 100% 0%;
     transition: background-size 0.4s ease;
     background-color: #EEE;
+    border: 1px solid #9e9e9e;
+
 
 }
 
@@ -374,6 +384,7 @@ body {
     align-items: center;
     flex-direction: row;
     gap: 2em;
+    background-color:#FAF7F0;
 }
 
 .streakStat{
@@ -446,3 +457,4 @@ body {
     margin-bottom: 1em;
 }
 /* --- */
+
